2009-08-23 Doug Simons <dpsimons@testplant.com>
	
	* Source/GSHorizontalTypesetter.m: Remove unlock and
	log the exception, but don't rethrow it.
	* Source/GSLayoutManager.m: return a zero length range in
	 -(NSRange)glyphRangeForCharacterRange:actualCharacterRange:
	when charRange has a length and a location of 0.
	Added by Gregory John Casamento <greg.casamento@gmail.com>
	
2009-08-23 17:16-BST David Chisnall <theraven@sucs.org>

	* Tools/sound/GSOSSSoundSink.m: Added OSS sound back end

2009-08-23 11:50-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Tools/sound/GNUmakefile: Fix circular dependency issue.
	Added _INCLUDE_DIRS and _LIB_DIRS for each entry so that
	it can build when GNUstep is not installed.

2009-08-23 03:52-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* configure: Regenerate
	* configure.ac: Added --disable-sound option.

2009-08-23 03:45-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* config.make.in: Add BUILD_SOUNDS
	* configure: Regenerate
	* configure.ac: Add BUILD_SOUNDS and checks for libraries.
	* GNUmakefile: Add to subprojects, if BUILD_SOUNDS is present.

2009-08-23 00:18-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add themes directory
	* Themes/GNUmakefile: New makefile
	* Themes/GNUmakefile.postamble: Makefile to copy themes.

2009-08-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Updated
	* Headers/Additions/GNUstepGUI/GSSoundSink.h
	* Headers/Additions/GNUstepGUI/GSSoundSource.h: Added
	* Headers/AppKit/NSSound.h: Added new methods
	* Sound/SndfileSource.m
	* Sound/AudioOutputSink.m: Added
	* Source/NSSound.m: Implementation using new bundle based playback.
	* Tools/gsnd: Removed

2009-08-22 19:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Add methods for drawing
	stepper cell here.
	* Source/GSThemeDrawing.m: Implementations for stepper cell functions.